--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -32,6 +32,7 @@
   color: #808080;
 }
 .newTaskForm button {
+  position: absolute;
   height: 100%;
   padding: 0 16px;
   background-color: #1e6f9f;
@@ -41,8 +42,11 @@
   display: flex;
   align-items: center;
   gap: 6px;
+  right: 16px;
   font-weight: 700;
   font-size: 14px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 @media (max-width: 450px) {
   .newTaskForm {
@@ -52,7 +56,7 @@
     padding: 16px;
   }
   .newTaskForm button {
-    padding: 10px;
+    padding: 16px;
     justify-content: center;
   }
 }
