--- a/src/components/Task/task.module.css
+++ b/src/components/Task/task.module.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .taskid {
@@ -52,7 +53,8 @@ p.taskCompleted {
 }
 
 .deleteButton {
-  padding: 16px 16px 16px 0;
+  position: absolute;
+  right: 16px;
   color: #808080;
   background: #262626;
   border: none;
